--- a/Task4 - Screening.ipynb
+++ b/Task4 - Screening.ipynb
@@ -26,6 +26,7 @@
    "metadata": {},
    "source": [
     "# QOSF Mentorship Program: Screening Task 4\n",
+    "#### Author: Kartikeya Rambhatla\n",
     "\n",
     "### The task is to find the lowest eigenvalue of a given $H$ matrix using Variational Quantum Eigensolver where, \n",
     "\n",
